--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
+  "homepage": "https://Top-Reh.github.io/admindashboard",
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@clerk/clerk-react": "^5.31.9",
+    "@firebase/storage": "^0.13.13",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^11.9.0",
+    "firebase": "^11.9.1",
     "imagekit": "^6.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   }
